meta tags у продукта и категории

--- a/src/BellonBundle/Resources/translations/messages.ru.yml
+++ b/src/BellonBundle/Resources/translations/messages.ru.yml
@@ -18,3 +18,6 @@ Product Category List: Категории продукта
 Product Category: Категория продукта
 Min Cost: Цена за маленький опт
 Max Cost: Цена за большой опт
+Meta Title: Meta заголовок
+Meta Description: Meta описание
+Meta Keywords: Meta ключевые слова
